feat: Composite에 따른 PropertyPanel 수정